<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC Backup</string>
    <string name="StepOneFil">Fil</string>
    <string name="StepOneNfc">NFC</string>
    <string name="StepTwoFil">Fil</string>
    <string name="StepTwoNfc">NFC</string>
    <string name="Läs">Läs från:</string>
    <string name="Skriv">Skriv till:</string>
    <string name="statusBox"></string>
    <string name="fileName">Ange filnamn el. siffra: </string>
    <string name="anonExp">Returenera</string>
    <string name="credz">,.-+*^\'´AHc/Breach pr0d `\'^*+-.,</string>
    <string name="autoLoad">Autoladda</string>
    
</resources>