<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/Läs"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/StepOneNfc"
        android:onClick="readNfcAction" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/StepOneFil"
        android:onClick="readFileAction" />

    <EditText
        android:id="@+id/filePath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri"
        android:text="@string/fileName" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Skriv"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/writeNfc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/StepTwoNfc"
            android:onClick="writeNfcAction" />

        <Button
            android:id="@+id/writeFile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/StepTwoFil"
            android:onClick="writeFileAction" />

        <TextView
            android:id="@+id/statusBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statusBox" />
    </LinearLayout>

</LinearLayout>